main layout issues sorted out

--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,9 @@ section {
 html {
   --black: #333;
   --white: #efefef;
-  --dark: navy;
-  --light: lighterblue;
-  --color: pink;
+  --dark: #1f2937;
+  --lightblue: #3882f6;
+  /* --color: pink; */
 
 }
 
@@ -68,10 +68,17 @@ inner-column {
   padding: 10px;
   /**/
   width: 98%;
-  max-width: 900px;
+  max-width: 1100px;
   margin-right: auto;
   margin-left: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
+
+header .inner-column {
+  padding: 0px;
+}
+
 
 /*TYPOGRAPHY*/
 .loud-voice {
@@ -95,34 +102,58 @@ inner-column {
   padding: 10px 20px;
 }
 
+product-card {
+  display: block;
+}
+
 /*MODULES*/
-graphic-diptych {
+.graphic-diptych {
   display: block;
   border: 4px solid dodgerblue;
 }
 
-graphic-diptych text-content {
+.graphic-diptych .text-content {
   display: block;
 }
 
-graphic-diptych picture {
+.graphic-diptych .picture {
   display: block;
+  max-width: 800px;
 }
+
+
+
+
 
 @media (min-width: 700px) {
-  graphic-diptych {
+  .graphic-diptych {
     display: flex;
     flex-direction: row-reverse;
     gap: 20px;
   }
 
-  graphic-diptych :is(text-content, picture) {
+  .graphic-diptych :is(.text-content, picture) {
     flex-basis: 50%;
     border: 1px solid;
   }
 }
 
+.products-grid {
+  display: block;
+}
+
+.products-grid .product-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 1em;
+}
+
 .welcome {
   background-color: var(--dark);
+  color: var(--white);
+}
+
+.welcome .button {
+  background-color: var(--lightblue);
   color: var(--white);
 }
